force-app/main/default/objects/Unify_National_Account__c/Unify_National_Account__c.object-meta.xml
<CustomObject>
    <description>For Unify national Account Feed</description>
    <label>Unify National Account</label>
    <nameField>
        <label>Unify National Account  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unify National Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>