force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Account_DW_Key__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Account_DW_Key__c</fullName>
    <label>Unify NA Account DW Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>