force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Account_Number__c</fullName>
    <label>Unify NA Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>