force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Account_Type__c</fullName>
    <label>Unify NA Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>U</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>