force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Account_Type_code_Definition__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Account_Type_code_Definition__c</fullName>
    <label>Unify NA Account Type code Definition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>