force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_ActionCd__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_ActionCd__c</fullName>
    <label>Unify NA ActionCd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>