force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Bill_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Bill_To_Number__c</fullName>
    <label>Unify NA Bill To Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>