force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Contract_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Contract_Group_Description__c</fullName>
    <label>Unify  NA Contract Group Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>