force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_CustAcctTypeDesc__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_CustAcctTypeDesc__c</fullName>
    <label>Unify NA CustAcctTypeDesc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>