force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Legacy_System_Cd__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Legacy_System_Cd__c</fullName>
    <description>(NU, PC, MA, SW, VE)</description>
    <label>Unify NA Legacy System Cd*</label>
    <length>40</length>
    <type>Text</type>
</CustomField>