force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Natl_Acct_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Natl_Acct_Group_ID__c</fullName>
    <description>Contract Group ID - ID created by Unify- Candy calls this the National Account Group ID) – Identifies the contract associated to the customer</description>
    <label>Unify NA Natl Acc Group ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>