force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Primary_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Primary_Sales_Rep_Name__c</fullName>
    <label>Unify NA Primary Sales Rep Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>