force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_Segment__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_Segment__c</fullName>
    <label>Unify NA Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F = Fine Paper</fullName>
            </value>
            <value>
                <fullName>M = Facilities Supplies</fullName>
            </value>
            <value>
                <fullName>P = Packaging</fullName>
            </value>
            <value>
                <fullName>L = Publishing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>