force-app/main/default/objects/Unify_National_Account__c/fields/Unify_NA_UniqueID__c.field-meta.xml
<CustomField>
    <fullName>Unify_NA_UniqueID__c</fullName>
    <externalId>true</externalId>
    <label>Unify NA UniqueID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>