force-app/main/default/objects/Unify_National_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unify_NA_Bill_To_Number__c</columns>
    <columns>NAME</columns>
    <columns>Unify_NA_Account_Number__c</columns>
    <columns>Unify_NA_Account_Type__c</columns>
    <columns>Unify_NA_ActionCd__c</columns>
    <columns>Unify_NA_Parent_Name__c</columns>
    <columns>Unify_NA_Natl_Acct_Group_ID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unify_NA_Account_Type_code_Definition__c</columns>
    <columns>Unify_NA_Service_TypeCd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>